implemented batch backprop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
         "type_traits": "c",
         "functional": "c",
         "atomic": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
