--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
         "tuple": "c",
         "type_traits": "c",
         "functional": "c",
-        "atomic": "c"
+        "atomic": "c",
+        "cstdlib": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
